Solve Footer Gap Problem

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ footer{
 }
 .footer-second-list-first{
     display: flex;
-    gap: 150px;
+    gap: 55px;
 }
 .footer-second-list-second{
     display: flex;
